--- a/package.json
+++ b/package.json
@@ -1,31 +1,27 @@
 {
-  "name": "recipesearchapp",
+  "name": "recipeapp",
   "version": "1.0.0",
-  "description": "FoodRecipe App",
+  "description": "A homework project that using all the JavaScript concepts learned in previous sections to create a Recipe Search App using JavaScript ES6 features, HTML, and CSS.",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack --mode development",
     "build": "webpack --mode production",
+    "dev": "webpack --mode development",
     "start": "webpack-dev-server --mode development --open"
   },
-  "author": "Chris Nguyen",
-  "license": "ISC",
-  "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-loader": "^8.1.0",
-    "babel-preset-env": "^1.7.0",
-    "html-webpack-plugin": "^4.0.2",
-    "webpack": "^4.42.1",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3"
-  },
-  "dependencies": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/monksedo/RecipeApp.git"
   },
+  "author": "Chris Nguyen",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/monksedo/RecipeApp/issues"
   },
-  "homepage": "https://github.com/monksedo/RecipeApp#readme"
+  "homepage": "https://github.com/monksedo/RecipeApp#readme",
+  "dependencies": {},
+  "devDependencies": {
+    "webpack": "^4.42.1",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3"
+  }
 }
