--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack --mode production",
-    "dev": "webpack --mode development",
+    "dev": "webpack",
     "start": "webpack-dev-server --mode development --open"
   },
   "repository": {
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/monksedo/RecipeApp#readme",
   "dependencies": {},
   "devDependencies": {
+    "html-webpack-plugin": "^4.0.4",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
