--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@babel/polyfill": "^7.8.7",
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
+    "fractional": "^1.0.0",
     "regenerator-runtime": "^0.13.5"
   },
   "devDependencies": {
