--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
     "fractional": "^1.0.0",
-    "regenerator-runtime": "^0.13.5"
+    "regenerator-runtime": "^0.13.5",
+    "uniqid": "^5.2.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
